TEST_PROGRAMS/INVALID/hardik_vala/two_vars_dont_make_a_right.min
# Two vars don't make a right.

var var: string;

